# EnergyTwin

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
docs/: advanced-ops.md  architecture.md  data-import.md  mlops-local.md  nasa-power.md  production-infra.md  public-data.md  roadmap.md  simulator-economics.md  system-design.md  weather-enrichment.md
scripts/: download_public_dataset.py  fetch_nasa_power.py  import_dataset.py  init_production_db.py  make_daily_launchd.py  prepare_default_real_data.py  prepare_public_dataset.py  run_local_pipeline.py  run_prefect_pipeline.py  schedule_local_pipeline.py  ship.py  smoke_production_infra.py  train_forecast_model.py
src/energytwin/: __init__.py  auth.py  automation.py  cache.py  data.py  district.py  domain.py  downloads.py  drift_reports.py  enrichment.py  forecasting.py  ingestion.py  mlflow_registry.py  mlops.py  model_artifacts.py  optimizer.py  production_db.py  public_pipeline.py  real_data_defaults.py  scheduler.py  server.py  simulator.py  sources.py  storage.py
src/energytwin/adapters/: __init__.py  building_data_genome.py  building_data_genome2.py  nasa_power.py
src/energytwin/app/static/: app.js  index.html  styles.css
tests/: test_energytwin.py
