[project]
name = "ai-energy-twin"
version = "0.1.0"
description = "A non-RL energy digital twin with forecasting, simulation, optimization, and dashboard APIs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ravi Raj" }]
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.116", "uvicorn>=0.35"]
ml = ["mlflow>=2.14", "numpy>=2.0", "pandas>=2.2", "torch>=2.3", "pytorch-forecasting>=1.1"]
ops = ["prefect>=3.0", "evidently>=0.4"]

[project.scripts]
energytwin = "energytwin.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
